Removing Quantity and fixing layout bug

--- a/sass/components/_cart.scss
+++ b/sass/components/_cart.scss
@@ -1,24 +1,19 @@
 .cart{
+    
+
     &__products{
-        
-        
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        // overflow: auto;
 
         &__table-titles{
             border-bottom: 1px solid colors(grey, dark);
             padding: 50px 0 10px 0;
-
-            &__quantity{
-                text-align: center;
-                padding: 0;
-
-                @media screen and (min-width: 992px) {
-                    max-width: 180px;
-                }
-            }
+            display: flex;
 
             &__price{
                 text-align: right;
-
 
                 @media screen and (min-width: 992px) {
                     max-width: 130px;
@@ -26,15 +21,16 @@
             }
         }
 
-        &__container{
+        /* &__container{
             justify-content: center;
-        }
+        } */
 
         &__card{
-            padding: 20px 0px;
+            padding: 10px 0px;
+            margin: 0px;
             
             border-bottom: 1px solid colors(grey, dark);
-            width: 100%;
+            //width: 100%;
 
             &__image{
 
@@ -44,34 +40,24 @@
             }
 
             &__content{
-               padding: 10px 0;
+               padding: 10px;
             }
 
-            &__quantity{
-               font-size: 18px;
+            &__title{
+                padding: 0;
+            }
 
-               @media screen and (min-width: 992px) {
-                    max-width: 150px;
-                    text-align: center;
-                    padding: 0;
-                }
-
-                & i{
-                    padding: 0 5px;
-                
-                
-                    &:hover{
-                        cursor: pointer;
-                    }
-                }
-            }   
+            &__desc{
+                padding: 0 0 15px 0;
+            }
 
             &__price{
+                font-weight: 700;
 
                 @media screen and (min-width: 992px) {
                     max-width: 130px;
                     text-align: right;
-                    padding: 0;
+                    padding: 10px 15px 0 0;
                 }
             }
         }
@@ -79,7 +65,7 @@
         &__total{
             border-bottom: 2px solid colors(tertiary);
             padding: 20px 0;
-            
+            display: flex;
 
             &__text{
                 margin-left: 20px;
